--- a/BlogApp/Views/Home/Index.cshtml
+++ b/BlogApp/Views/Home/Index.cshtml
@@ -1,10 +1,17 @@
-﻿@{
+﻿
+@model List<Article>
+
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
 @section HeadSections{
     <meta name="author" content="Coder Bilişim"/>
 }
+
+
+
 
 <!-- Page header with logo and tagline-->
 <header class="py-5 bg-light border-bottom mb-4">
@@ -32,16 +39,12 @@
             </div>
             <!-- Nested row for non-featured blog posts-->
             <div class="row">
-                <div class="col-lg-6">
-                    <partial name="_blogPost1"/>
-                    <partial name="_blogPost2" />
-                    
-                </div>
-                <div class="col-lg-6">
-                    <partial name="_blogPost3" />
-                    <partial name="_blogPost4" />
-                   
-                </div>
+                @foreach (var m in Model)
+                {
+                    <partial name="_blogPost" model="@m" />
+                }
+
+
             </div>
             <!-- Pagination-->
             <nav aria-label="Pagination">
