--- a/BlogApp/Views/_ViewImports.cshtml
+++ b/BlogApp/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using BlogApp
 @using BlogApp.Models
 @using BlogApp.Migrations
+@using Microsoft.AspNetCore.Mvc.Localization
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
